<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_1_open_second_activity"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_start_service"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnSystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_open_dialer"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnOtherApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4_share_content"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnBroadcast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_send_broadcast" />

    </LinearLayout>
</ScrollView>